# SubscribeTracker

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  REPO_REALITY_CHECK.md  SETUP.md  docker-compose.yml  future-work.md  progress-8d7df402-9f20-4cc3-a7bb-9739d09bacbf.txt  react-native-guide.md  skills-lock.json  store.config.json
.agent/rules/: ruleset.md
.claude/: settings.json
.claude/agents/: design.md  mobile.md  pm.md  qa.md  rn-reviewer.md  store-publisher.md  supabase.md  tech-lead.md
.claude/commands/: store-publish.md  store-status.md  store-update.md
.claude/hooks/: session-start.sh  stop-doc-nudge.sh
.claude/rules/: react-native.md  revenuecat.md  supabase.md
.github/workflows/: ci.yml
apps/mobile/: .env.example  .eslintignore  .eslintrc.js  App.tsx  CLAUDE.md  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json
docs/: index.html  privacy-policy.html  style.css  terms-of-service.html
docs/design/: design-tokens.json
services/worker/: Dockerfile  pyproject.toml  requirements.txt
services/worker/rules/: README.md
services/worker/rules/merchants/v1/: apple.yaml  netflix.yaml  spotify.yaml
services/worker/src/: config.py  main.py
services/worker/src/domain/: entities.py
services/worker/src/extractors/: llm_extractor.py  pipeline.py  rule_extractor.py
services/worker/src/providers/: base.py  gmail.py
services/worker/src/sync/: jobs.py
services/worker/src/utils/: redaction.py
supabase/: CLAUDE.md  schema.sql
web/: README.md  index.html  privacy.html  support.html  terms.html
(+197 files in other folders)
